--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-# LLM API Configuration
-LLM_API_URL=https://openai.com/v1/chat/completions
-LLM_API_KEY=***
-LLM_MODEL=GPT-5
+# Gemini API Configuration
+GEMINI_API_KEY=
+GEMINI_MODEL=gemini-2.5-flash
 
 # Bot Configuration
 BOT_NAME=wechat-meeting-scribe
