--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "secretary"
   ],
   "dependencies": {
+    "@google/genai": "^1.25.0",
+    "dotenv": "^16.3.1",
     "wechaty": "^1.20.2",
-    "wechaty-puppet-wechat": "^1.18.4",
-    "axios": "^1.6.0",
-    "dotenv": "^16.3.1"
+    "wechaty-puppet-padlocal": "^1.20.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
-    "tsx": "^4.7.0"
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0"
   }
 }
