--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@google/genai": "^1.25.0",
     "dotenv": "^16.3.1",
     "wechaty": "^1.20.2",
-    "wechaty-puppet-padlocal": "^1.20.1"
+    "wechaty-puppet-wechat": "^1.18.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
