--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Gemini API Configuration
-GEMINI_API_KEY=
-GEMINI_MODEL=gemini-2.5-flash
+LLM_API_KEY=
+LLM_MODEL=gemini-2.5-flash
 
 # Bot Configuration
 BOT_NAME=wechat-meeting-scribe
