--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-# Gemini API Configuration
+# LLM API Configuration
+# For Gemini: use https://generativelanguage.googleapis.com/v1beta/openai/
+# For OpenAI: use https://api.openai.com/v1
+# For other providers: use their OpenAI-compatible endpoint
+LLM_BASE_URL=https://generativelanguage.googleapis.com/v1beta/openai/
 LLM_API_KEY=
 LLM_MODEL=gemini-2.5-flash
 
