--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "secretary"
   ],
   "dependencies": {
-    "@google/genai": "^1.25.0",
     "dotenv": "^16.3.1",
+    "openai": "^4.73.0",
     "wechaty": "^1.20.2",
     "wechaty-puppet-wechat": "^1.18.4"
   },
