--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
 # LLM API Configuration
-# For Gemini: use https://generativelanguage.googleapis.com/v1beta/openai/
+# For Gemini (default): use https://generativelanguage.googleapis.com/v1beta/openai/
 # For OpenAI: use https://api.openai.com/v1
 # For other providers: use their OpenAI-compatible endpoint
 LLM_BASE_URL=https://generativelanguage.googleapis.com/v1beta/openai/
-LLM_API_KEY=
+LLM_API_KEY=your_api_key_here
 LLM_MODEL=gemini-2.5-flash
 
 # Bot Configuration
 BOT_NAME=wechat-meeting-scribe
 
 # Target rooms to monitor (comma-separated, use room topic names)
+# Leave empty to monitor all rooms
 TARGET_ROOMS=
 
 # Summarization Triggers
@@ -25,7 +26,3 @@ SUMMARY_KEYWORD=@bot 总结
 # Message buffer settings
 MAX_BUFFER_SIZE=200
 MIN_MESSAGES_FOR_SUMMARY=5
-
-# Wechaty puppet options
-PUPPET_UOS_ENABLED=true
-PUPPET_HEADLESS=false
