ring buffer and fix race condition

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ SUMMARY_KEYWORD=@bot 总结
 # Message buffer settings
 MAX_BUFFER_SIZE=200
 MIN_MESSAGES_FOR_SUMMARY=5
+
+# Summary queue size (how many pending summaries to queue)
+CONCURRENT_SUMMARY=10
